# haproxy-config

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  Readme.md
.github/workflows/: testing.yml
examples/: ports.rs
src/: backend_with_comment.txt  bind_with_comment.txt  config.rs  error.rs  group_with_single_user.txt  group_with_users.txt  lib.rs  line.rs  lines.rs  parser.rs  section.rs  sections.rs  tomato.rs  user.txt  user_with_group.txt
src/config/: backend.rs  error.rs  frontend.rs  global.rs  listen.rs  userlist.rs
src/line/: borrowed.rs  owned.rs
src/parser/: error.rs
src/section/: borrowed.rs  owned.rs
src/sections/: borrowed.rs  line.rs  owned.rs
src/sections/lines/: borrowed.rs  owned.rs
tests/: config_parse.rs  from_gh.rs  large_haproxy.cfg  main.rs  minimal_haproxy.cfg  section_parse.rs  standard.rs  tooling.rs  unsupported.rs
tests/from_gh/: Readme.md
tests/unsupported/: conditional_blocks.cfg  nonesens.cfg
