[package]
name = "haproxy-config"
version = "0.4.1"
edition = "2021"

rust-version = "1.65" # let-else
authors = ["David Kleingeld"]
readme = "README.md"
description = "Parse HAProxy configs and easily query it"
repository = "https://github.com/dvdsk/haproxy-config"
license = "MIT"
keywords = ["haproxy", "config", "parser"]
categories = ["parser-implementations"]
exclude = [
	".github/",
	".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
itertools = "0.11.0"
peg = "0.8.1"
thiserror = "1.0.49"

[dev-dependencies]
color-eyre = "0.6"
